test: add exception handling for unsupported operations in SelectFromWhereCompositeConditionTest