@@ -18,6 +18,7 @@ package ee.jakarta.tck.nosql.query;
 import ee.jakarta.tck.nosql.AbstractTemplateTest;
 import ee.jakarta.tck.nosql.entities.Fruit;
 import ee.jakarta.tck.nosql.factories.FruitListSupplier;
+import org.assertj.core.api.Assertions;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Nested;
 import org.junit.jupiter.params.ParameterizedTest;
@@ -39,35 +40,47 @@ public class SelectFromWhereCompositeConditionTest extends AbstractTemplateTest 
         @DisplayName("should test AND")
         @ArgumentsSource(FruitListSupplier.class)
         void shouldAnd(List<Fruit> fruits) {
-            template.insert(fruits);
-            Fruit sample = fruits.getFirst();
-            List<Fruit> result = template.typedQuery("FROM Fruit WHERE name = :name AND quantity = :quantity", Fruit.class)
-                    .bind("name", sample.getName())
-                    .bind("quantity", sample.getQuantity())
-                    .result();
 
-            assertThat(result)
-                    .isNotEmpty()
-                    .allMatch(fruit -> fruit.getName().equals(sample.getName())
-                            && fruit.getQuantity().equals(sample.getQuantity()));
+            try {
+                template.insert(fruits);
+                Fruit sample = fruits.getFirst();
+                List<Fruit> result = template.typedQuery("FROM Fruit WHERE name = :name AND quantity " +
+                                "= :quantity", Fruit.class)
+                        .bind("name", sample.getName())
+                        .bind("quantity", sample.getQuantity())
+                        .result();
+
+                assertThat(result)
+                        .isNotEmpty()
+                        .allMatch(fruit -> fruit.getName().equals(sample.getName())
+                                && fruit.getQuantity().equals(sample.getQuantity()));
+            } catch (UnsupportedOperationException exp) {
+                Assertions.assertThat(exp).isInstanceOf(UnsupportedOperationException.class);
+            }
         }
 
         @ParameterizedTest
         @DisplayName("should test OR")
         @ArgumentsSource(FruitListSupplier.class)
         void shouldOr(List<Fruit> fruits) {
-            template.insert(fruits);
-            Fruit sample1 = fruits.get(0);
-            Fruit sample2 = fruits.get(1);
-            List<Fruit> result = template.typedQuery("FROM Fruit WHERE name = :name1 OR name = :name2", Fruit.class)
-                    .bind("name1", sample1.getName())
-                    .bind("name2", sample2.getName())
-                    .result();
 
-            assertThat(result)
-                    .isNotEmpty()
-                    .allMatch(fruit -> fruit.getName().equals(sample1.getName())
-                            || fruit.getName().equals(sample2.getName()));
+            try {
+                template.insert(fruits);
+                Fruit sample1 = fruits.get(0);
+                Fruit sample2 = fruits.get(1);
+                List<Fruit> result = template.typedQuery("FROM Fruit WHERE name = :name1 OR name = :name2", Fruit.class)
+                        .bind("name1", sample1.getName())
+                        .bind("name2", sample2.getName())
+                        .result();
+
+                assertThat(result)
+                        .isNotEmpty()
+                        .allMatch(fruit -> fruit.getName().equals(sample1.getName())
+                                || fruit.getName().equals(sample2.getName()));
+
+            } catch (UnsupportedOperationException exp) {
+                Assertions.assertThat(exp).isInstanceOf(UnsupportedOperationException.class);
+            }
         }
 
     }
@@ -80,35 +93,46 @@ public class SelectFromWhereCompositeConditionTest extends AbstractTemplateTest 
         @DisplayName("should test AND")
         @ArgumentsSource(FruitListSupplier.class)
         void shouldAnd(List<Fruit> fruits) {
-            template.insert(fruits);
-            Fruit sample = fruits.get(0);
-            List<Fruit> result = template.typedQuery(
-                    "FROM Fruit WHERE name = '" + sample.getName() + "' AND quantity = " + sample.getQuantity(),
-                    Fruit.class)
-                    .result();
+            try {
+                template.insert(fruits);
+                Fruit sample = fruits.getFirst();
+                List<Fruit> result = template.typedQuery(
+                                "FROM Fruit WHERE name = '" + sample.getName() + "' AND quantity = " +
+                                        sample.getQuantity(),
+                                Fruit.class)
+                        .result();
 
-            assertThat(result)
-                    .isNotEmpty()
-                    .allMatch(fruit -> fruit.getName().equals(sample.getName())
-                            && fruit.getQuantity().equals(sample.getQuantity()));
+                assertThat(result)
+                        .isNotEmpty()
+                        .allMatch(fruit -> fruit.getName().equals(sample.getName())
+                                && fruit.getQuantity().equals(sample.getQuantity()));
+            } catch (UnsupportedOperationException exp) {
+                Assertions.assertThat(exp).isInstanceOf(UnsupportedOperationException.class);
+            }
         }
 
         @ParameterizedTest
         @DisplayName("should test OR")
         @ArgumentsSource(FruitListSupplier.class)
         void shouldOr(List<Fruit> fruits) {
-            template.insert(fruits);
-            Fruit sample1 = fruits.get(0);
-            Fruit sample2 = fruits.get(1);
-            List<Fruit> result = template.typedQuery(
-                    "FROM Fruit WHERE name = '" + sample1.getName() + "' OR name = '" + sample2.getName() + "'",
-                    Fruit.class)
-                    .result();
 
-            assertThat(result)
-                    .isNotEmpty()
-                    .allMatch(fruit -> fruit.getName().equals(sample1.getName())
-                            || fruit.getName().equals(sample2.getName()));
+            try {
+                template.insert(fruits);
+                Fruit sample1 = fruits.get(0);
+                Fruit sample2 = fruits.get(1);
+                List<Fruit> result = template.typedQuery(
+                                "FROM Fruit WHERE name = '" + sample1.getName() + "' OR name = '"
+                                        + sample2.getName() + "'",
+                                Fruit.class)
+                        .result();
+
+                assertThat(result)
+                        .isNotEmpty()
+                        .allMatch(fruit -> fruit.getName().equals(sample1.getName())
+                                || fruit.getName().equals(sample2.getName()));
+            } catch (UnsupportedOperationException exp) {
+                Assertions.assertThat(exp).isInstanceOf(UnsupportedOperationException.class);
+            }
         }
 
     }
